# Zaram

./: .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_GUIDE.md  QWEN.md  README.md  copilot-instructions.md  electron-builder.yml  package-lock.json  package.json  pyproject.toml  setup-engineering-pack.ps1
.ai/: 00_AI_ENGINEERING_MANIFEST.md  00_PROJECT_BIBLE.md  01_ARCHITECTURE.md  01_SYSTEM_ARCHITECTURE.md  02_RUNTIME_CONTRACT.md  02_UI_GUIDELINES.md  03_MODEL_ROUTER.md  03_RUNTIME_REGISTRY.md  04_EVENT_BUS.md  04_MEMORY_SYSTEM.md  05_EXECUTION_ENGINE.md  06_CODING_STANDARDS.md  06_RUNTIME_EVENT_SPEC.md  07_PRESENCE_RUNTIME_SPEC.md  07_ROADMAP.md  08_CURRENT_SPRINT.md  09_EMBODIMENT_RUNTIME_SPEC.md  09_UNREAL_INTEGRATION.md  10_ORB_ENGINE_ARCHITECTURE.md  10_PROJECT_STATUS.md  11_AI_CONTEXT.md  11_ELECTRON_ARCHITECTURE.md  12_PLUGIN_SYSTEM.md  13_ADR_INDEX.md  14_GLOSSARY.md  ARCHITECTURE_PRINCIPLES.md  CHANGELOG_ARCHITECTURE_v1.md  ZARAM_BIBLE.md  ZARAM_CONSTITUTION.md
.continue/: config.yaml  rules.md
.github/: copilot-instructions.md
.kilo/: kilo.jsonc
.kilocode/: instructions.md
backend/: MIGRATION_v0.4-kernel-stable.md  MIGRATION_v0.5.1-voice-runtime-foundation.md  Qwen_python_20260710_zz2mlsgn5.py  Zaram UI test 01.html  Zaram_Test_UI_Final.html  Zaram_Test_UI_v2.6.html  Zaram_UI_v3.html  Zaram_UI_v3_2.html  Zaram_UI_v3_Human.html  brains.json  characters.json  config.json  conftest.py  main.py  requirements.txt  start.bat  test_execution_engine.py  test_kernel.py  test_models_runtime.py  zaram_elite_workspace_console.html
desktop/: README.md  (+5 more)
(+461 files in other folders)
