[project]
name = "zaram-os"
version = "0.1.0"
description = "Local-First Personal AI Operating System"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"] # Let the formatter handle line length

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["venv", "node_modules", "frontend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"